@@ -1,0 +1,39 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.giraph.bsp.checkpoints;
+
+import org.apache.giraph.conf.GiraphConfiguration;
+import org.apache.giraph.master.MasterCompute;
+
+/**
+ * Default checkpoint supported checker.
+ * Most tasks will support checkpointing by default unless they do output
+ * during the computation. Some tasks however can use non-checkpointable
+ * features, e.g.: static variables to pass data around between supersteps
+ * or new threads started from MasterCompute or external resources. In that
+ * case to prevent accidental checkpointing you should provide checker
+ * implementation.
+ */
+public class DefaultCheckpointSupportedChecker
+    implements CheckpointSupportedChecker {
+  @Override
+  public boolean isCheckpointSupported(GiraphConfiguration conf,
+                                       MasterCompute masterCompute) {
+    return !conf.doOutputDuringComputation();
+  }
+}
